--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "eslint": "^6.0.1",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.18.0"
+    "eslint": "6.0.1",
+    "eslint-config-airbnb": "17.1.0"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "dummyTest": "node src/app.js"
   },
   "repository": {
     "type": "git",
