chore (unit testing): setup unit testing
- remove previous dummyTest script from package.json
- create test folder in root folder
- use dummy test in mocha documentation
- delete previous dummy test in app.js
- update test script in .travis.yml

[Finishes #163970107]

--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "chai": "4.2.0",
+    "chai-http": "4.3.0",
     "eslint": "6.0.1",
-    "eslint-config-airbnb": "17.1.0"
+    "eslint-config-airbnb": "17.1.0",
+    "mocha": "6.1.4"
   },
   "scripts": {
-    "test": "mocha",
-    "dummyTest": "node src/app.js"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
