--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "description": "Backend for Author's Haven Application",
   "main": "app.js",
   "dependencies": {
-    "express": "4.17.1"
+    "dotenv": "^8.0.0",
+    "express": "4.17.1",
+    "pg": "7.11.0",
+    "pg-hstore": "2.3.3",
+    "sequelize": "5.9.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.5.0",
+    "@babel/preset-env": "^7.5.0",
+    "@babel/register": "^7.4.4",
     "chai": "4.2.0",
     "chai-http": "4.3.0",
     "coveralls": "3.0.4",
@@ -17,7 +24,7 @@
     "nyc": "14.1.1"
   },
   "scripts": {
-    "test": "mocha",
+    "test": "mocha --require @babel/register",
     "coverage": "nyc npm test && nyc report --reporter=text-lcov",
     "coveralls": "npm run coverage"
   },
