--- a/package.json
+++ b/package.json
@@ -4,29 +4,34 @@
   "description": "Backend for Author's Haven Application",
   "main": "app.js",
   "dependencies": {
-    "dotenv": "^8.0.0",
+    "dotenv": "8.0.0",
     "express": "4.17.1",
     "pg": "7.11.0",
     "pg-hstore": "2.3.3",
     "sequelize": "5.9.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.0",
-    "@babel/preset-env": "^7.5.0",
-    "@babel/register": "^7.4.4",
+    "@babel/core": "7.5.0",
+    "@babel/node": "7.5.0",
+    "@babel/preset-env": "7.5.0",
+    "@babel/register": "7.4.4",
     "chai": "4.2.0",
     "chai-http": "4.3.0",
     "coveralls": "3.0.4",
     "eslint": "6.0.1",
     "eslint-config-airbnb": "17.1.0",
+    "eslint-plugin-import": "2.18.0",
     "mocha": "6.1.4",
     "mocha-lcov-reporter": "1.3.0",
+    "nodemon": "1.19.1",
     "nyc": "14.1.1"
   },
   "scripts": {
     "test": "mocha --require @babel/register",
     "coverage": "nyc npm test && nyc report --reporter=text-lcov",
-    "coveralls": "npm run coverage"
+    "coveralls": "npm run coverage",
+    "babel-node": "babel-node --presets=latest",
+    "start-dev": "nodemon --exec babel-node ./server/app.js"
   },
   "repository": {
     "type": "git",
