--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "coveralls": "3.0.4",
     "eslint": "6.0.1",
     "eslint-config-airbnb": "17.1.0",
-    "eslint-plugin-import": "2.18.0",
+    "eslint-plugin-import": "^2.18.0",
     "mocha": "6.1.4",
     "mocha-lcov-reporter": "1.3.0",
     "nodemon": "1.19.1",
@@ -31,7 +31,8 @@
     "coverage": "nyc npm test && nyc report --reporter=text-lcov",
     "coveralls": "npm run coverage",
     "babel-node": "babel-node --presets=latest",
-    "start-dev": "nodemon --exec babel-node ./server/app.js"
+    "start": "babel-node server/app.js",
+    "start-dev": "nodemon --exec babel-node server/app.js"
   },
   "repository": {
     "type": "git",
@@ -41,6 +42,9 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/chinemelu/AuthorsHaven-Backend/issues"
+  },
+  "engines": {
+    "node": "10.13.0"
   },
   "homepage": "https://github.com/chinemelu/AuthorsHaven-Backend#readme"
 }
