--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "Backend for Author's Haven Application",
   "main": "app.js",
   "dependencies": {
-    "@babel/cli": "^7.5.0",
     "@babel/core": "7.5.0",
-    "@babel/node": "7.5.0",
     "@babel/preset-env": "7.5.0",
+    "@babel/node": "7.5.0",
     "@babel/register": "7.4.4",
     "dotenv": "8.0.0",
     "express": "4.17.1",
@@ -16,6 +15,7 @@
     "sequelize": "5.9.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.5.0",
     "@babel/core": "7.5.0",
     "@babel/node": "7.5.0",
     "@babel/preset-env": "7.5.0",
@@ -25,7 +25,7 @@
     "coveralls": "3.0.4",
     "eslint": "6.0.1",
     "eslint-config-airbnb": "17.1.0",
-    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-import": "2.18.0",
     "mocha": "6.1.4",
     "mocha-lcov-reporter": "1.3.0",
     "nodemon": "1.19.1",
@@ -36,8 +36,9 @@
     "coverage": "nyc npm test && nyc report --reporter=text-lcov",
     "coveralls": "npm run coverage",
     "babel-node": "babel-node --presets=latest",
-    "start": "babel-node server/app.js",
-    "start-dev": "nodemon --exec babel-node server/app.js"
+    "start": "npm run build && node build/app.js",
+    "start-dev": "nodemon --exec babel-node server/app.js",
+    "build": "babel server -d build"
   },
   "repository": {
     "type": "git",
