--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "dependencies": {
     "dotenv": "8.0.0",
     "express": "4.17.1",
-    "pg": "7.11.0",
-    "pg-hstore": "2.3.3",
-    "sequelize": "5.9.2"
+    "mongoose": "5.6.4"
   },
   "devDependencies": {
     "@babel/cli": "7.5.0",
