--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
   "dependencies": {
     "dotenv": "8.0.0",
     "express": "4.17.1",
-    "mongoose": "5.6.4"
+    "mongoose": "5.6.4",
+    "mongoose-beautiful-unique-validation": "7.1.1",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "@babel/cli": "7.5.0",
     "@babel/core": "7.5.0",
     "@babel/node": "7.5.0",
+    "@babel/plugin-transform-runtime": "7.5.5",
     "@babel/preset-env": "7.5.0",
     "@babel/register": "7.4.4",
+    "@babel/runtime": "7.5.5",
+    "babel-eslint": "10.0.2",
     "chai": "4.2.0",
     "chai-http": "4.3.0",
     "coveralls": "3.0.4",
@@ -26,7 +31,7 @@
     "nyc": "14.1.1"
   },
   "scripts": {
-    "test": "mocha --require @babel/register",
+    "test": "mocha --require @babel/register --exit",
     "coverage": "nyc npm test && nyc report --reporter=text-lcov",
     "coveralls": "npm run coverage",
     "babel-node": "babel-node --presets=latest",
