--- a/.eslintrc
+++ b/.eslintrc
@@ -9,8 +9,10 @@
   },
   "rules": {
     "one-var": 0,
+    "import/no-extraneous-dependencies": ["error", {"devDependencies": true, "optionalDependencies": false, "peerDependencies": false}],
     "one-var-declaration-per-line": 0,
     "new-cap": 0,
+    "max-len": ["error", { "code": 80 }],
     "consistent-return": 0,
     "no-param-reassign": 0,
     "comma-dangle": 0,
