--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dotenv": "8.0.0",
     "express": "4.17.1",
     "mongoose": "5.6.4",
-    "mongoose-beautiful-unique-validation": "7.1.1",
-    "morgan": "^1.9.1"
+    "mongoose-beautiful-unique-validation": "7.1.1"
   },
   "devDependencies": {
     "@babel/cli": "7.5.0",
@@ -27,6 +26,7 @@
     "eslint-plugin-import": "2.18.0",
     "mocha": "6.1.4",
     "mocha-lcov-reporter": "1.3.0",
+    "morgan": "^1.9.1",
     "nodemon": "1.19.1",
     "nyc": "14.1.1"
   },
