--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "app.js",
   "dependencies": {
     "dotenv": "8.0.0",
-    "express": "4.17.1",
+    "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
+    "graphql": "^14.4.2",
     "mongoose": "5.6.4",
     "mongoose-beautiful-unique-validation": "7.1.1"
   },
@@ -26,7 +28,6 @@
     "eslint-plugin-import": "2.18.0",
     "mocha": "6.1.4",
     "mocha-lcov-reporter": "1.3.0",
-    "morgan": "^1.9.1",
     "nodemon": "1.19.1",
     "nyc": "14.1.1"
   },
