feat(verification link): send verification link upon signup
- install sendgrid dependency
- modify function for creating token
- create function for sending emails
- create functions for validating the email verification process
- create a services folder to hold database operations
- create a UserServices class to help with database operations concerning a user
- create function for verifying emails
- refactor functions to do one thing
- create ResponseHandler class

[Finishes #163970118]

--- a/.env-sample
+++ b/.env-sample
@@ -1,5 +1,7 @@
-DEV_DB_USERNAME=#username of development environment host
-DEV_DB_NAME=#name of development environment name 
-DEV_DB_HOST=#host of development database
-DEV_DB_PASSWORD=#password of development database
-PORT=#listening port of express
+DATABASE_URL= mongoDB url
+JWT_SECRET= secret for creating jwt
+CRYPTO_SECRET=password for crypto module encryption
+CRYPTO_ALGORITHM=the crypto algorithm
+SENDGRID_API_KEY=API key for sending sengrid email
+EMAIL_SENDER=the host of the email
+DEV_BASE_URL=the development base url 
