--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Backend for Author's Haven Application",
   "main": "app.js",
   "dependencies": {
+    "@sendgrid/mail": "^6.4.0",
     "bcrypt": "^3.0.6",
     "dotenv": "8.0.0",
     "express": "^4.17.1",
@@ -11,7 +12,7 @@
     "graphql": "^14.4.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "5.6.4",
-    "mongoose-beautiful-unique-validation": "7.1.1"
+    "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
     "@babel/cli": "7.5.0",
